devise FULLY IMPLEMENTED wooooo

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,5 +10,8 @@
   <%= @topic.description %>
 </p>
 
-<%= link_to 'Edit', edit_topic_path(@topic) %> |
+<% if current_user == @topic.user %>
+	<%= link_to 'Edit', edit_topic_path(@topic) %> |
+<% end %>
+
 <%= link_to 'Back', topics_path %>
