--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@topic) do |f| %>
+<%= form_for @topic do |f| %>
+  
   <% if @topic.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@topic.errors.count, "error") %> prohibited this topic from being saved:</h2>
@@ -15,11 +16,14 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+  
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
+
 <% end %>
