--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,8 +1,11 @@
 <head>
     <style>
-      table, td {
-          border: 1px solid black;
+/*    table, td {
+        border: 1px solid black;
       }
+      table {
+        border-collapse: collapse;
+      }*/
     </style>
 
 </head>
@@ -15,7 +18,7 @@
     <thead>
       <tr>
         <th>Title</th>
-        <th>String</th>
+        <th>Votes</th>
         <th colspan="7"></th>
       </tr>
     </thead>
@@ -42,5 +45,5 @@
 
   <br>
 
-  <%= link_to 'New Topic', new_topic_path %>
+  <%= link_to 'Create a New Topic', new_topic_path %>
 </body>
